Fix dropdown item hover bgcolor in dark mode (#256)

--- a/apps/frontend/static_src/scss/components/language-selector.scss
+++ b/apps/frontend/static_src/scss/components/language-selector.scss
@@ -49,5 +49,11 @@
             background-color: $color--black;
             color: $color--light-grey;
         }
+        #{$root}__dropdown-item {
+            &:hover,
+            &:focus {
+                background-color: $color--grey;
+            }
+        }
     }
 }
